# family-planning-data-extraction-api

./: .gitignore  main.py  pyproject.toml  requirements.txt
backend/: main.py
backend/core/: enums.py  env_config.py  logging_config.py
backend/routes/: data_cleaning.py  data_extraction.py
backend/schemas/: shared.py
backend/services/: extract.py  metadata.py  transform.py
backend/services/utils/: extract.py  load.py  transform.py
core/: context.py  logging_config.py  middlewares.py
routes/: __init__.py  metadata.py
schemas/: shared.py
services/: helpers.py
services/metadata_scripts/: download_metadata.py  get_data_elements.py  get_indicators.py  get_organisation_units.py  helpers.py
